--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Population Dashboard</title>
 </head>
 <body>
-    <iframe frameborder="0" seamless="seamless" style=" width: 1480px; height: 800px; border:none;" src="https://uiiacid-my.sharepoint.com/:x:/g/personal/21523232_students_uii_ac_id/ESrZISCw0P9GrtGya5DOVKIBJ8MAkCL0lze1-o0KIhTKiA?e=jxhUuD&action=embedview&wdbipreview=true&wdAllowInteractivity=True&wdHideSheetTabs=True&Item=dashboard2&wdHideHeaders=True&ActiveCell=A35"></iframe>
+    <iframe frameborder="0" seamless="seamless" style=" width: 1480px; height: 800px; border:none;" src="https://365umedumy-my.sharepoint.com/:x:/g/personal/22107293_siswa365_um_edu_my/EUUbnSD9D4lMpOjrzhda_coBzusy06EfAesI1jeW4OZzeA?e=CByQ8h&action=embedview&wdbipreview=true&wdAllowInteractivity=True&wdHideSheetTabs=True&Item=dashboard2&wdHideHeaders=True&ActiveCell=A35"></iframe>
 </body>
 </html>
 
